--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^7.0.1",
+        "@fortawesome/free-brands-svg-icons": "^7.0.1",
+        "@fortawesome/free-regular-svg-icons": "^7.0.1",
+        "@fortawesome/free-solid-svg-icons": "^7.0.1",
+        "@fortawesome/react-fontawesome": "^3.0.2",
+        "@tippyjs/react": "^4.2.6",
         "classnames": "^2.5.1",
         "normalize.css": "^8.0.1",
         "react": "^19.1.1",
