--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
         "@fortawesome/free-regular-svg-icons": "^7.0.1",
         "@fortawesome/free-solid-svg-icons": "^7.0.1",
         "@fortawesome/react-fontawesome": "^3.0.2",
+        "@reduxjs/toolkit": "^2.9.0",
         "@tippyjs/react": "^4.2.6",
+        "axios": "^1.12.2",
         "classnames": "^2.5.1",
         "normalize.css": "^8.0.1",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
-        "react-router-dom": "^7.9.1"
+        "react-redux": "^9.2.0",
+        "react-router-dom": "^7.9.1",
+        "redux-saga": "^1.3.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.33.0",
